CHANGELOG

9 octobre 2011
  - mise a jour avec la version 0.4c de DimitriGilbert

  - modification
    - debug de la création de base de données (install.php/bdd.class.php)
    - debug des fonctions chrysa_ qui ne pointait pas sur le plugin Helloword au lieu de celui du plugin

  - ajout
    - rajout du void_mail.php oublié dans le dossier install 
    - rajout d'une redirection pour lancer l'install et suppression de l'index de redirection pendant l'install
    - rajout de la gestion du cache depuis le panel

  - bug trouvé
    - initialisation de l'éditeur en ligne