@@ -1,5 +1,5 @@
 <?php
-global $base_url,$get; 
+global $base_url,$nom_projet,$get; 
 ?>
 
 
@@ -8,7 +8,7 @@ global $base_url,$get;
 	<head>
 		<link rel="stylesheet" href="<?php echo $base_url; ?>admin.php?ajax_admin=1&module=controll_panel&action=css" type="text/css" media="all" />
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Mon projet avec Balsa</title>
+		<title><?php echo $nom_projet ?></title>
 	</head>
 	<body>
 		<div class="site" id="site">
