@@ -1,5 +1,5 @@
 <?php
-global $path,$path_w,$bdd,$base_url;
+global $path,$path_w,$bdd,$base_url,$nom_projet;
 include_once('controll_panel.php');
 $action=$_GET['action'];
 switch($action)
@@ -11,7 +11,7 @@ switch($action)
 	<head>
 		<link rel="stylesheet" href="<?php echo $base_url; ?>admin.php?ajax_admin=1&module=controll_panel&action=css" type="text/css" media="all" />
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Mon projet avec Balsa</title>
+		<title><?php echo $nom_projet ?></title>
 	</head>
 	<body>
 		<div class="site" id="site">
@@ -44,6 +44,16 @@ switch($action)
 	case'css':		
 		header('Content-type: text/css');
 		include_once($path.'admin/plugin/controll_panel/controll_panel.css.php');
+		break;
+	case'regen_css':
+                unlink($path_w.'media/css/css.css');
+                inclure_css();
+                header('location: '.$base_url.'admin.php');
+		break;
+	case'regen_js':
+                unlink($path_w.'media/js/js.php');
+                inclure_js();
+                header('location: '.$base_url.'admin.php');
 		break;
 }
 
